Add in Bootstrap styling and a very basic navbar in a header file

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,8 +7,7 @@
     = csrf_meta_tags
     %meta{:name => "viewport", :content => "width=device-width, initial-scale=1, shrink-to-fit=no"}
   %body
-    -# Haven't made the header yet! Soon, though!
-    -#= render 'layouts/header' 
+    = render 'layouts/header' 
     - flash.each do |message_type, message|
       = content_tag :div, message, class: "alert alert-#{message_type}"
     .container
