--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -7,3 +7,9 @@
     %ul.navbar-nav.mr-auto
       %li.nav-item.active
         = link_to "About", about_path, class: "nav-link"
+      - if user_signed_in?
+        %li.nav-item.active
+          = link_to  "Log out (#{current_user.username})", destroy_user_session_path, method: :delete, class: "nav-link"
+      - else
+        %li.nav-item.active
+          = link_to  "Log in", new_user_session_path, class: "nav-link"
