Add sign-up link to home page in anticipation of initial Heroku deployment

--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -4,4 +4,4 @@
 
 %p This is the first extremely basic home page!
 
-%p Naturally, this will have a lot more stuff later!
+%p= link_to "New user? Sign up here! (although the mailer might not work yet)", new_user_registration_path
