--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -5,11 +5,11 @@
     %span.navbar-toggler-icon
   .collapse.navbar-collapse#navbarSupportedContent
     %ul.navbar-nav.mr-auto
-      %li.nav-item.active
-        = link_to "About", about_path, class: "nav-link"
       - if user_signed_in?
         %li.nav-item.active
-          = link_to  "Log out (#{current_user.username})", destroy_user_session_path, method: :delete, class: "nav-link"
+          = link_to  current_user.username, current_user, class: "nav-link"
+        %li.nav-item.active
+          = link_to  "Log out", destroy_user_session_path, method: :delete, class: "nav-link"
       - else
         %li.nav-item.active
           = link_to  "Log in", new_user_session_path, class: "nav-link"
@@ -19,3 +19,5 @@
         .dropdown-menu
           = link_to "Create new", new_activity_path, class: "dropdown-item"
           = link_to "View all", activities_path, class: "dropdown-item"
+      %li.nav-item.active
+        = link_to "About", about_path, class: "nav-link"
