--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -4,4 +4,6 @@
 
 %p This is the first extremely basic home page!
 
-%p= link_to "New user? Sign up here! (although the mailer might not work yet)", new_user_registration_path
+%p= link_to "New user? Sign up here! (although the mailer doesn't work yet)", new_user_registration_path
+
+%p Current build: Tagging works! Try putting tags on your activity! Click on the tags to find all activities with those tags!
