--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -6,4 +6,6 @@
 
 %p= link_to "New user? Sign up here! (although the mailer doesn't work yet)", new_user_registration_path
 
-%p Current build: Tagging works! Try putting tags on your activity! Click on the tags to find all activities with those tags!
+%p Current build: Moderator queue implemented! When an activity is submitted, a moderator or admin will need to approve it first.
+
+%p Editing an activity will place it back in the moderator queue.
