--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -8,6 +8,10 @@
       - if user_signed_in?
         %li.nav-item.active
           = link_to  current_user.username, current_user, class: "nav-link"
+        - if current_user.admin? || current_user.moderator?
+          %li.nav-item.active
+            -#= link_to "Moderation queue", modqueue_path, class: "nav-link"
+            = link_to "Mod items: #{Activity.where(status: [:unapproved, :edited]).count}", modqueue_path, class: "badge badge-info"
         %li.nav-item.active
           = link_to  "Log out", destroy_user_session_path, method: :delete, class: "nav-link"
       - else
@@ -19,10 +23,7 @@
         .dropdown-menu
           = link_to "Create new", new_activity_path, class: "dropdown-item"
           = link_to "View all", activities_path, class: "dropdown-item"
-      %li.nav-item.dropdown.active
-        %a.nav-link.dropdown-toggle{"href"=>"#", "id"=>"navbarDropdown", "role"=>"button", "data-toggle"=>"dropdown", "aria-haspopup"=>"true", "aria-expanded"=>"false"}
-          Tags
-        .dropdown-menu
-          = link_to "View all", tags_path, class: "dropdown-item"
+      %li.nav-item.active
+        = link_to "Tags", tags_path, class: "nav-link"
       %li.nav-item.active
         = link_to "About", about_path, class: "nav-link"
