--- a/app/views/activities/edit.html.haml
+++ b/app/views/activities/edit.html.haml
@@ -2,8 +2,8 @@
 
 %h2 Edit this activity
 
-%p Don't get too used to this! Eventually once you edit an activity, it'll get put back in the moderator queue for approval.
+%p When you submit your edits, the activity will be taken off the live site and placed back into the mod queue.
 
-%p Otherwise you could make an activity and then change it to spam or something else, and that wouldn't be good.
+%p But don't worry! once it's approved again, it will go right back!
 
 = render "activity_form"
