Added Tag Category model to contain Tags in groups

--- a/app/views/activities/_activity.html.haml
+++ b/app/views/activities/_activity.html.haml
@@ -12,7 +12,7 @@
       .btn-group.float-right{"role" => "group", "aria-label" => "Activity controls"}
         - if activity.unapproved? || activity.edited?
           = link_to "Approve", approve_activity_path(activity), method: :put, data: { confirm: "Approve this activity?" }, class: "btn btn-outline-secondary btn-sm"
-        - elsif activity.approved? && ( current_user.admin? || current_user.moderator? )
+        - elsif activity.approved? && ( policy(activity).unapprove? )
           = link_to "Return to mod queue", unapprove_activity_path(activity), method: :put, class: "btn btn-outline-secondary btn-sm"
         = link_to "Edit", edit_activity_path(activity), class: "btn btn-outline-secondary btn-sm"
         = link_to "Delete", activity, method: :delete, data: { confirm: "Are you sure you wanna delete this one?" }, class: "btn btn-outline-secondary btn-sm"
