--- a/app/views/tags/new.html.haml
+++ b/app/views/tags/new.html.haml
@@ -1,3 +1,7 @@
 - provide(:title, "New Tag")
 
-%p I didn't give you a link here! Eventually admins will be able to create tags, but not yet.
+%h3 New Tag
+
+%p Please create new tags sparingly - If we add too many tags, the lists become difficult to navigate and people are less likely to find all the relevant tags for their activity.
+
+= render "form"
