--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -24,6 +24,6 @@
           = link_to "Create new", new_activity_path, class: "dropdown-item"
           = link_to "View all", activities_path, class: "dropdown-item"
       %li.nav-item.active
-        = link_to "Tags", tags_path, class: "nav-link"
+        = link_to "Tags", all_tags_path, class: "nav-link"
       %li.nav-item.active
         = link_to "About", about_path, class: "nav-link"
