--- a/app/views/tags/edit.html.haml
+++ b/app/views/tags/edit.html.haml
@@ -1,3 +1,5 @@
 - provide(:title, "Edit Tag")
 
-%p I didn't give you a link here! You might think you're sneaky, but you can't edit tags!
+%h3 Edit this Tag
+
+= render "form"
