Add in i18n support and translate the navbar

--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -6,6 +6,4 @@
 
 %p= link_to "New user? Sign up here! (although the mailer doesn't work yet)", new_user_registration_path
 
-%p Current build: Moderator queue implemented! When an activity is submitted, a moderator or admin will need to approve it first.
-
-%p Editing an activity will place it back in the moderator queue.
+%p Current build: Tags are now placed into categories. Site can now be viewed in Japanese, but most of the text isn't translated yet.
