--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,5 +1,5 @@
 %nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
-  = link_to "ALT Activities", root_path, class: "navbar-brand"
+  = link_to t('layouts.site_title'), root_path, class: "navbar-brand"
   %button.navbar-toggler{"type" => "button", "data-toggle" => "collapse", "data-target" => "#navbarSupportedContent",
                           "aria-controls" => "navbarSupportedContent", "aria-expanded" => "false", "aria-label" => "Toggle Navigation" }
     %span.navbar-toggler-icon
@@ -10,20 +10,19 @@
           = link_to  current_user.username, current_user, class: "nav-link"
         - if current_user.admin? || current_user.moderator?
           %li.nav-item.active
-            -#= link_to "Moderation queue", modqueue_path, class: "nav-link"
             = link_to "Mod items: #{Activity.where(status: [:unapproved, :edited]).count}", modqueue_path, class: "badge badge-info"
         %li.nav-item.active
-          = link_to  "Log out", destroy_user_session_path, method: :delete, class: "nav-link"
+          = link_to t('layouts.log_out'), destroy_user_session_path, method: :delete, class: "nav-link"
       - else
         %li.nav-item.active
-          = link_to  "Log in", new_user_session_path, class: "nav-link"
+          = link_to t('layouts.log_in'), new_user_session_path, class: "nav-link"
       %li.nav-item.dropdown.active
         %a.nav-link.dropdown-toggle{"href"=>"#", "id"=>"navbarDropdown", "role"=>"button", "data-toggle"=>"dropdown", "aria-haspopup"=>"true", "aria-expanded"=>"false"}
-          Activities
+          = t('layouts.activity_category')
         .dropdown-menu
-          = link_to "Create new", new_activity_path, class: "dropdown-item"
-          = link_to "View all", activities_path, class: "dropdown-item"
+          = link_to t('layouts.new_activity'), new_activity_path, class: "dropdown-item"
+          = link_to t('layouts.view_all_activities'), activities_path, class: "dropdown-item"
       %li.nav-item.active
-        = link_to "Tags", all_tags_path, class: "nav-link"
+        = link_to t('layouts.tag_list'), all_tags_path, class: "nav-link"
       %li.nav-item.active
-        = link_to "About", about_path, class: "nav-link"
+        = link_to t('layouts.about'), about_path, class: "nav-link"
