--- a/app/views/activities/_activity_form.html.haml
+++ b/app/views/activities/_activity_form.html.haml
@@ -1,5 +1,6 @@
 .form_group
   = form_for(@activity) do |f|
+    = render 'shared/error_messages', object: f.object
     .field
       .form-group
         = f.text_field :name, placeholder: "Activity name", class: 'form-control'
@@ -7,7 +8,10 @@
         = f.text_area :long_description, placeholder: "Long Description", class: 'form-control', rows: 8
         = f.text_field :time_estimate, placeholder: "Estimated time", class: 'form-control'
         .tag-chooser
-          %p Tags:
+          %h4 Tags
+          %p Choose the tags that apply to your activity. You don't have to choose tags for every category.
+          %p The more accurate your tags are, the easier people will be able to find your activity!
+          %p 
           - @tag_categories.each do |category|
             .tag-block.col-md-4
             %h5= category.name
