--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -25,4 +25,6 @@
       %li.nav-item.active
         = link_to t('layouts.tag_list'), all_tags_path, class: "nav-link"
       %li.nav-item.active
+        = link_to "Textbooks", textbooks_path, class: "nav-link"
+      %li.nav-item.active
         = link_to t('layouts.about'), about_path, class: "nav-link"
