--- a/app/views/activities/new.html.haml
+++ b/app/views/activities/new.html.haml
@@ -1,5 +1,5 @@
-- provide(:title, "New Activity")
+- provide(:title, t('activities.page_titles.new_activity'))
 
-%h2 Make a new activity
+%h2= t('activities.new_activity_header')
 
 = render "activity_form"
