--- a/app/views/activities/index.html.haml
+++ b/app/views/activities/index.html.haml
@@ -1,8 +1,8 @@
-- provide(:title, "All Activities")
+- provide(:title, t('activities.page_titles.all_activities'))
 
 .row
   - @activities.each do |activity|
-    .col-sm-4.mt-4
+    .col-sm-6.col-md-4.col-lg-4.mt-4
       .card
         %h5.card-header= link_to activity.name, activity
         .card-body
