--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -25,6 +25,10 @@
       %li.nav-item.active
         = link_to t('layouts.tag_list'), all_tags_path, class: "nav-link"
       %li.nav-item.active
-        = link_to "Textbooks", textbooks_path, class: "nav-link"
+        = link_to t('layouts.textbook_listing'), textbooks_path, class: "nav-link"
       %li.nav-item.active
         = link_to t('layouts.about'), about_path, class: "nav-link"
+      - if I18n.locale == :ja
+        %li.nav-item= link_to "English", {locale: "en"}, class: "nav-link"
+      - elsif I18n.locale == :en
+        %li.nav-item= link_to "日本語", {locale: "ja"}, class: "nav-link"
