--- a/app/views/activities/_activity.html.haml
+++ b/app/views/activities/_activity.html.haml
@@ -4,7 +4,7 @@
     %h5.card-title= activity.short_description
     .row
       .col-md-9
-        %p= activity.long_description
+        %p= markdown(activity.long_description)
       .col-md-3
         %p= t('activities.show.time_estimate', time_estimate: activity.time_estimate)
         %p
