--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -12,3 +12,4 @@
 %ul
   %li Textbooks are now built into the site. Moderators and admins can create textbooks and then add pages, which refer to a particular grammar point.
   %li You can switch between Japanese and English on the navbar. Much of the site is still missing translations, and somebody will eventually need to correct Jake's childish translations.
+  %li You can use Markdown to make your activity descriptions a little easier to read.
