--- a/app/views/textbooks/show.html.haml
+++ b/app/views/textbooks/show.html.haml
@@ -19,7 +19,7 @@
     - @pages.each do |page|
       %tr
         %td= page.page
-        %td= page.description
+        %td= markdown(page.description)
         %td= link_to page.tag.long_name, page.tag
         - if policy(page).update?
           %td
