--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -10,6 +10,5 @@
 
 %p Recent updates:
 %ul
-  %li Textbooks are now built into the site. Moderators and admins can create textbooks and then add pages, which refer to a particular grammar point.
-  %li You can switch between Japanese and English on the navbar. Much of the site is still missing translations, and somebody will eventually need to correct Jake's childish translations.
+  %li You can now attach files to your activities! Files are hosted on Amazon S3. 
   %li You can use Markdown to make your activity descriptions a little easier to read.
