--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -5,6 +5,20 @@
     %span.navbar-toggler-icon
   .collapse.navbar-collapse#navbarSupportedContent
     %ul.navbar-nav.mr-auto
+      %li.nav-item.active
+        = link_to t('layouts.es'), es_path, class: "nav-link"
+      %li.nav-item.active
+        = link_to t('layouts.jhs'), jhs_path, class: "nav-link"
+      %li.nav-item.active
+        = link_to t('layouts.grammar'), grammar_path, class: "nav-link"
+      %li.nav-item.active
+        = link_to t('layouts.textbook_listing'), textbooks_path, class: "nav-link"
+      %li.nav-item.dropdown.active
+        %a.nav-link.dropdown-toggle{"href"=>"#", "id"=>"navbarDropdown", "role"=>"button", "data-toggle"=>"dropdown", "aria-haspopup"=>"true", "aria-expanded"=>"false"}
+          = t('layouts.activity_category')
+        .dropdown-menu
+          = link_to t('layouts.new_activity'), new_activity_path, class: "dropdown-item"
+          = link_to t('layouts.view_all_activities'), activities_path, class: "dropdown-item"
       - if user_signed_in?
         %li.nav-item.active
           = link_to  current_user.username, current_user, class: "nav-link"
@@ -16,18 +30,6 @@
       - else
         %li.nav-item.active
           = link_to t('layouts.log_in'), new_user_session_path, class: "nav-link"
-      %li.nav-item.dropdown.active
-        %a.nav-link.dropdown-toggle{"href"=>"#", "id"=>"navbarDropdown", "role"=>"button", "data-toggle"=>"dropdown", "aria-haspopup"=>"true", "aria-expanded"=>"false"}
-          = t('layouts.activity_category')
-        .dropdown-menu
-          = link_to t('layouts.new_activity'), new_activity_path, class: "dropdown-item"
-          = link_to t('layouts.view_all_activities'), activities_path, class: "dropdown-item"
-      %li.nav-item.active
-        = link_to t('layouts.tag_list'), all_tags_path, class: "nav-link"
-      %li.nav-item.active
-        = link_to t('layouts.textbook_listing'), textbooks_path, class: "nav-link"
-      %li.nav-item.active
-        = link_to t('layouts.about'), about_path, class: "nav-link"
       - if I18n.locale == :ja
         %li.nav-item= link_to "English", {locale: "en"}, class: "nav-link"
       - elsif I18n.locale == :en
