--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,3 +12,4 @@
       = content_tag :div, message, class: "alert alert-#{message_type}"
     .container
       = yield
+    -#= render 'layouts/footer'
