--- a/app/views/site_pages/es.html.haml
+++ b/app/views/site_pages/es.html.haml
@@ -2,6 +2,6 @@
 
 %h2 Elementary School
 
-=render "activities/school_level_activity_list"
+=render "activities/school_level_activity_list", textbook_level: Textbook.ES
 
-%h4 Textbooks:
+
