--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -10,5 +10,6 @@
 
 %p Recent updates:
 %ul
+  %li Textbooks can now be assigned to a particular school level (elementary, JHS, etc.) The landing pages for a school level will show all of the textbooks.
+  %li There are some now some basic landing pages for Elementary, JHS, and Grammar points.
   %li You can now attach files to your activities! Files are hosted on Amazon S3. 
-  %li You can use Markdown to make your activity descriptions a little easier to read.
