--- a/app/views/site_pages/jhs.html.haml
+++ b/app/views/site_pages/jhs.html.haml
@@ -2,6 +2,5 @@
 
 %h2 Junior High School
 
-=render "activities/school_level_activity_list"
+=render "activities/school_level_activity_list", textbook_level: Textbook.JHS
 
-%h4 Textbooks:
