Add a few new fields to users and implement user edits

--- a/app/views/activities/_activity_form.html.haml
+++ b/app/views/activities/_activity_form.html.haml
@@ -21,6 +21,6 @@
                 %li #{tag_item.check_box class: "form-check-input"} #{markdown(tag_item.label class: "form-check-label")}
         %h3 Files:
         %p If your activity has any files, please attach them below:
-        = f.file_field :documents, multiple: true, direct_upload: true
+        = f.file_field :documents, multiple: true, direct_upload: true, class: "form-control-file"
         %br
         = f.submit t('activities.form.submit'), class:"btn btn-primary"
