--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -6,15 +6,22 @@
 .input-group.mb-3
   =form_for(@user) do |f|
     .input-group-prepend
-      %span.input-group-text#username-input 
-        Username
+      %span.input-group-text#username-input Username
       = f.text_field :username, class: 'form-control', "aria-described-by" => "username-input", "aria-label" => "Username", disabled: !current_user.admin?
     .input-group-prepend
-      %span.input-group-text#email-input 
-        E-mail address
+      %span.input-group-text#email-input E-mail address
       = f.text_field :email, class: 'form-control', "aria-describedby" => "email-input", "aria-label" => "E-mail", disabled: !current_user.admin?
+    .input-group-prepend
+      %span.input-group-text#home-country-input Home country
+      = f.text_field :home_country, class: 'form-control', "aria-describedby" => "home-country-input", "aria-label" => "Home country"
+    .input-group-prepend
+      %span.input-group-text#location-input Current location:
+      = f.text_field :location, class: 'form-control', "aria-describedby" => "location-input", "aria-label" => "Current location:"
+    .input-group-prepend
+      %span.input-group-text#bio-input User bio:
+      = f.text_area :bio, class: 'form-control', "aria-describedby" => "bio-input", "aria-label" => "User bio", rows: 4
+
 
     = f.submit "Submit", class: "btn btn-primary"
 
 
-%p Soon, we'll give users the ability to specify their place of origin, current location, and a short bio.
