--- a/app/views/activities/index.html.haml
+++ b/app/views/activities/index.html.haml
@@ -4,7 +4,9 @@
   - @activities.each do |activity|
     .col-sm-6.col-md-4.col-lg-4.mt-4
       .card
-        %h5.card-header= link_to activity.name, activity
+        %h5.card-header
+          =link_to activity.name, activity
+          %span.badge.badge-info.float-right= activity.upvote_count
         .card-body
           %p.card-text= activity.short_description
           = link_to "View", activity, class: "btn btn-outline-primary float-right"
