--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -10,6 +10,6 @@
 
 %p Recent updates:
 %ul
+  %li You can give a thumbs up to activities you like. Activities are displayed based on how many people like them.
+  %li You can edit your profile with some basic info.
   %li Textbooks can now be assigned to a particular school level (elementary, JHS, etc.) The landing pages for a school level will show all of the textbooks.
-  %li There are some now some basic landing pages for Elementary, JHS, and Grammar points.
-  %li You can now attach files to your activities! Files are hosted on Amazon S3. 
