--- a/app/views/tags/show.html.haml
+++ b/app/views/tags/show.html.haml
@@ -16,3 +16,4 @@
     .card-body
       %span.font-weight-bold= link_to activity.name, activity
       %span.font-weight-normal= activity.short_description
+      %span.badge.badge-info.float-right= activity.upvote_count
